--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -61,6 +61,7 @@ flutter:
   assets:
     - assets/images/brasao_ufv.png
     - assets/icons/google_icon.png
+    - assets/images/random_person.jpg
   #   - images/a_dot_burr.jpeg
   #   - images/a_dot_ham.jpeg
 
