--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -34,6 +34,23 @@ dependencies:
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^1.0.2
+  #cloud_firestore: ^3.1.9
+  #google_sign_in: ^5.1.0
+  #firebase_storage: ^10.2.8
+  #firebase_auth: ^3.3.8
+  #image_picker: ^0.8.4+1
+
+  #cloud_firestore: ^0.13.0+1
+  cloud_firestore: ^1.0.0
+  #cloud_firestore: ^1.0.3
+  image_picker: ^0.6.2+3
+  google_sign_in: ^4.1.1
+  firebase_storage: ^10.0.0
+  #firebase_storage: ^8.0.5
+  #firebase_storage: ^4.0.0
+  #firebase_auth: ^0.15.3
+  firebase_auth: ^3.0.1
+  flutter_launcher_icons: ^0.8.0
 
 dev_dependencies:
   flutter_test:
