--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -40,6 +40,7 @@ dependencies:
   firebase_storage: ^10.0.0
   firebase_auth: ^3.0.1
   flutter_launcher_icons: ^0.8.0
+  email_validator: ^2.0.1
 
 dev_dependencies:
   flutter_test:
