--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -35,12 +35,14 @@ dependencies:
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^1.0.2
   cloud_firestore: ^1.0.0
-  image_picker: ^0.6.2+3
+  #image_picker: ^0.6.2+3
   google_sign_in: ^4.1.1
   firebase_storage: ^10.0.0
   firebase_auth: ^3.0.1
   flutter_launcher_icons: ^0.8.0
   email_validator: ^2.0.1
+  google_maps_flutter: ^2.0.4
+  location: ^4.2.0
 
 dev_dependencies:
   flutter_test:
