--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -72,6 +72,7 @@ flutter:
     - assets/images/brasao_ufv.png
     - assets/icons/google_icon.png
     - assets/images/random_person.jpg
+    - assets/images/capivara.jpg
   #   - images/a_dot_burr.jpeg
   #   - images/a_dot_ham.jpeg
 
