--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -45,6 +45,7 @@ dependencies:
   location: ^4.2.0
   geolocator: ^7.0.2
   android_intent_plus: ^3.1.0
+  google_map_polyline_new: ^0.3.0+2
 
 dev_dependencies:
   flutter_test:
