Adding marker in the help request and drawing the route

--- a/.gitignore
+++ b/.gitignore
@@ -31,6 +31,8 @@
 .pub/
 /build/
 
+android/app/build/*
+
 # Web related
 lib/generated_plugin_registrant.dart
 
@@ -44,3 +46,4 @@ app.*.map.json
 /android/app/debug
 /android/app/profile
 /android/app/release
+/android/app/build
