--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -46,6 +46,8 @@ dependencies:
   geolocator: ^7.0.2
   android_intent_plus: ^3.1.0
   google_map_polyline_new: ^0.3.0+2
+  flutter_dotenv: ^4.0.0-nullsafety.0
+  flutter_polyline_points: ^1.0.0
 
 dev_dependencies:
   flutter_test:
@@ -75,6 +77,7 @@ flutter:
     - assets/icons/google_icon.png
     - assets/images/random_person.jpg
     - assets/images/capivara.jpg
+    - .env
   #   - images/a_dot_burr.jpeg
   #   - images/a_dot_ham.jpeg
 
