--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -35,7 +35,6 @@ dependencies:
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^1.0.2
   cloud_firestore: ^1.0.0
-  #image_picker: ^0.6.2+3
   google_sign_in: ^4.1.1
   firebase_storage: ^10.0.0
   firebase_auth: ^3.0.1
@@ -45,10 +44,8 @@ dependencies:
   location: ^4.2.0
   geolocator: ^7.0.2
   android_intent_plus: ^3.1.0
-  google_map_polyline_new: ^0.3.0+2
-  flutter_dotenv: ^4.0.0-nullsafety.0
-  flutter_polyline_points: ^1.0.0
   random_password_generator: ^0.2.1
+  crypt: ^3.0.1
 
 dev_dependencies:
   flutter_test:
@@ -78,7 +75,6 @@ flutter:
     - assets/icons/google_icon.png
     - assets/images/random_person.jpg
     - assets/images/capivara.jpg
-    - .env
   #   - images/a_dot_burr.jpeg
   #   - images/a_dot_ham.jpeg
 
